# cloud-platform-ide

./: .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  supervisord.conf.diff
deployment/: deployment-template.yaml
manifests/: supervisord.conf.diff
manifests/deployment/: certificate-template.yaml  deployment-template-v2.yaml  deployment-template.yaml
manifests/docker/: docker-compose.yaml
manifests/docker-compose/: docker-compose.yaml
manifests/docker/aio/: Dockerfile
manifests/docker/base/: Dockerfile
manifests/docker/ie/: Dockerfile
manifests/docker/kathara/: Dockerfile  entrypoint.sh  kathara_prepare.sh
manifests/docker/kathara/supervisor/: dockerd.conf
manifests/docker/math/: Dockerfile
manifests/home/: .zshrc
manifests/home/.config/code-server/: config.yaml
manifests/home/Documents/vscode-launch-debug/: README.md
manifests/home/Templates/homework/: CMakeLists.txt
manifests/home/Templates/homework-cxx/: CMakeLists.txt
manifests/home/Templates/homework/include/: functions.h
manifests/home/Templates/homework/src/: functions.c
manifests/home/ie/Documents/vscode-launch-debug/: zh-cn.md
manifests/home/kathara/: .condarc
manifests/install-scripts/: docker-entrypoint.sh  entrypoint.sh  run-coder.sh  setup-digital.sh  setup-geogebra.sh  setup-iverilog.sh
manifests/tool-scripts/: download-cpptools.sh  pull-kathara.sh
scripts/: bootstrap.sh  build.sh  inspect_student_pod.sh  render.go
scripts/crd/: check_password.sh  render.go  render.sh
scripts/debug/: run.sh
(+6 files in other folders)
